推荐优化，增加商品详情的推荐
